# HealthPrepV2

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT_READINESS.md  Dockerfile  MULTI_TENANCY_SETUP.md  PRODUCTION_FIX_INSTRUCTIONS.md  SECURITY_SETUP.md  admin_routes.py  app.py  auth_routes.py  backfill_global_presets.py  check_db.py  create_default_user.py  create_test_user.py  debug_helper.py  debug_page.html  docker-compose.yml  docker-entrypoint.sh  enhance_baseline_screening_coverage.py  enhance_specialty_presets.py  fix_patient_schema.py  fix_screening_type_schema.py  forms.py  gunicorn.conf.py  init_db.py  init_system_org.py  keep_alive.py  load_specialty_presets.py  main.py  migrate_epic_registration_fields.py  migrate_multi_tenancy.py  migrate_ocr_text.py  migrate_root_admin.py  migrate_screening_type_created_by.py  migrate_screening_types.py  migrate_user_roles.py  migration_add_user_agent.py  models.py  (+30 more)
.github/: dependabot.yml
admin/: analytics.py  config.py  logs.py  presets.py  value_analytics.py
attached_assets/: 09192025_HITRUST_SRM_v1.5.3_Inheritance_Provider_Amazon_Web_S_1769982412902.xlsx  Pasted--05-18-58-18-0000-1120-INFO-Listening-at-http-0-0-0-0-5000-1120-2025-10-05-18-58-18-000-1759692379652_1759692379654.txt  Pasted--2025-08-13-22-32-17-0000-1451-ERROR-unexpected-indent-models-py-line-1003-Traceback-most--1755124875246_1755124875249.txt  Pasted--2025-08-21-21-17-38-0000-3102-ERROR-Exception-in-worker-process-Traceback-most-recent-call-l-1755811091116_1755811091117.txt  Pasted--PREP-SHEET-GENERAT-1768957378640_1768957378640.txt  (+272 more)
(+301 files in other folders)
