[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "routes>=2.5.1",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "python-dateutil>=2.9.0.post0",
    "tesseract>=0.1.3",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "pymupdf>=1.26.3",
    "opencv-python>=4.12.0.88",
    "flask-migrate>=4.1.0",
    "trafilatura>=2.0.0",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "rq>=2.5.0",
    "rq-dashboard>=0.8.5",
    "cryptography>=45.0.6",
    "requests",
]
